# team-project-24spring-0

./: .gitignore  .tasks  README.md  crates.js  env_setup.sh  help.html  report.html  report1-0.md  search-index.js  settings.html  src-files.js
src-tauri/: .gitignore  Cargo.toml  build.rs  commit.bat  commit.sh  output.txt  rustfmt.toml  tauri.conf.json
src-tauri/proto/: editor.proto  foo.proto
src-tauri/src/: main.rs
src-tauri/src/assembler/: assemble.rs  basic.rs  mod.rs  riscv.rs  rv32f.rs  rv32i.rs
src-tauri/src/file_io/: storage.rs
src-tauri/src/interface/: assembler.rs  file_io.rs  frontend.rs  middleware.rs  mod.rs  parser.rs  remote.rs  simulator.rs  storage.rs
src-tauri/src/io/: file_io.rs  mod.rs
src-tauri/src/menu/: file.rs  help.rs  menu_file.rs  mod.rs  setting.rs  test.rs
src-tauri/src/middleware/: implementation.rs  mod.rs
src-tauri/src/middleware/interface/: mod.rs  parser.rs
src-tauri/src/modules/riscv/: middleware.rs  mod.rs
src-tauri/src/modules/riscv/basic/: mod.rs
src-tauri/src/modules/riscv/basic/assembler/: assembler.rs  basic.rs  mod.rs  operand.rs  register.rs  riscv.rs
src-tauri/src/modules/riscv/basic/interface/: assemble.rs  assembler.rs  mod.rs  parser.rs
src-tauri/src/modules/riscv/basic/parser/: label.rs  (+5 more)
src-tauri/src/modules/riscv/rv32f/: constants.rs  mod.rs
src-tauri/src/modules/riscv/rv32i/: constants.rs  mod.rs  parser.rs
src-tauri/src/parser/: label.rs  lexer.rs  macro.rs  mod.rs  parser.rs
src-tauri/src/remote/: client.rs  mod.rs  server.rs  test.rs  utils.rs
src-tauri/src/simulator/: bus.rs  cpu.rs  dram.rs  instruction.rs  memory.rs  mod.rs  register.rs  simulator.rs  test.rs
src-tauri/src/storage/: mod.rs  rope_store.rs  storage.rs
src-tauri/src/test/: mod.rs  parser.rs
src-tauri/src/test/parser/: sample.rs
src-tauri/src/test/simulator/: cpu_test.rs  mod.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tests/assembler/: mod.rs  sample.rs
src-tauri/src/tests/assembler/rv32i/: is_test.rs  mod.rs
src-tauri/src/tests/parser/: mod.rs  sample.rs
src-tauri/src/tests/parser/rv32i/: mod.rs  op_test.rs  reg_test.rs
src-tauri/src/tests/remote/: helper.rs  mod.rs  server.rs  server_test.rs
src-tauri/src/tests/simulator/: cpu_test.rs  helper.rs  mod.rs  op_test.rs  simulator_test.rs
src-tauri/src/tests/simulator/rv32i/: mod.rs  op_test.rs
src-tauri/src/types/: assembler_types.rs  menu_types.rs  middleware.rs  middleware_types.rs  mod.rs  rpc_types.rs
src-tauri/src/utility/: any.rs  debug.rs  enum_map.rs  mod.rs  ptr.rs  remote_helper.rs  state_helper.rs  syscall_helper.rs  text_helper.rs
(+889 files in other folders)
