[package]
name = "moras"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "moras"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.10.0"
tauri = { version = "1.6.0", features = [ "fs-read-dir", "fs-create-dir", "fs-exists", "notification-all"] }
ropey = "1.6.1"
logos = "0.14.0"
lazy_static = "1.4.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
ux = { git = "https://github.com/kjetilkjeka/uX.git", rev = "1081930" }
derive_builder = "0.11.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
