[package]
name = "moras"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "moras"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
tonic-build = "0.11"

[dependencies]
derive_builder = "0.20.0"
logos = "0.14.0"
once_cell = "1.19.0"
prost = "0.12.3"
rand = "0.8.5"
regex = "1.9.6"
ropey = "1.6.1"
rust-analyzer = "0.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tauri = { version = "1.6.2", features = [ "dialog-all", "fs-read-dir", "fs-create-dir", "fs-exists", "notification-all"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
ux = { git = "https://github.com/kjetilkjeka/uX.git", rev = "1081930" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
[profile.dev]
incremental = false

